--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,131 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 header {
-    background-color: aqua;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 80px;
-}
-
-.header-menu h1 {
-    
-}
-
-
-nav ul {
     display: flex;
-    justify-content: flex-end;
-    margin-right: 1rem;
-    margin-top: -80px;
+    justify-content:space-between;
+    background-color: orange;
+    height: 5rem;
+    align-items: center;
 }
 
-li {
-    margin: 1rem;
+header h1 {
+    margin-left: 2rem;
 }
+
+header .nav-menu ul {
+    display: flex;
+    list-style: none;
+}
+
+header .nav-menu ul li {
+    margin-right: 2rem;
+}
+
+.banner {
+    display: flex;
+    position: relative;
+    align-items: center;
+}
+
+.banner img {
+    width: 100%;
+    height: auto;
+}
+
+.banner .subtitle {
+    position: absolute;
+    top: 70%;
+    right: 10%;
+    transform: translateY(-50%);
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    font-size: 20px;
+}
+
+.main-content {
+    display: flex;
+    max-width: 100%;
+    align-items: center;
+    margin: 2rem;
+}
+
+.main-content::before {
+    content: "";
+    position: absolute;
+    top:28rem;
+    left: 20%;
+    width: 2px;
+    height: 100%;
+    background-color: #000;
+  }
+
+.main-content .about {
+    width: 20%;
+    text-align: center;
+}
+
+.main-content p {
+    width: 75%;
+    height: auto;
+    text-align: justify;
+}
+
+
+.projects-section {
+    display: flex;
+    align-items: center;
+    max-width: 100%;
+    margin: 2rem;
+}
+
+.projects-section::before {
+    content: "";
+    position: absolute;
+
+    left: 20%;
+    width: 2px;
+    height: 100%;
+    background-color: #000;
+  }
+
+
+.projects-section .work {
+    width: 20%;
+    text-align: center;
+    border-right: dotted;
+}
+
+.projects-section .apps{
+    width: 80%;
+    flex-wrap: wrap;
+    border-left: dotted;
+}
+
+.project {
+    display: flex;
+    position: relative;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects-section .apps .project a img {
+    max-width: 100%;
+    height: auto;
+}
+
+.projects-section .apps .project .project-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    font-size: 20px;
+}
+
