--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,18 @@
     header {
       display: flex;
       justify-content: space-between;
-      background-color: lightgreen; /* Light orange */
+      background-color: white; /* Light orange */
       height: 5rem;
       align-items: center;
       padding: 0 2rem;
+      margin: 0;
     }
 
     header h1 {
       font-family: 'Courier New', monospace;
       font-size: 1.8rem;
-      color: #fff;
+      color: black;
+      margin-left: -40rem;
     }
 
     header .nav-menu ul {
@@ -31,19 +33,18 @@
       margin-right: 2rem;
       font-family: 'Courier New', monospace;
       font-size: 1rem;
-      color: #fff;
+      color: black;
       text-decoration: none;
     }
 
     .nav-menu a {
-        color: #fff;
+        color: black;
         font-weight: bold;
         text-decoration: none;
     }
 
     /* Banner styles */
     .banner {
-      display: flex;
       position: relative;
       align-items: center;
       height: 400px;
